Fix HR overflow adding height and width to div.

--- a/frontend/src/app/bot/Bot.css
+++ b/frontend/src/app/bot/Bot.css
@@ -52,7 +52,7 @@
     bottom: 0;
     width: 100%;
     font-size: calc(7px + 1vw);
-    height: calc(30px + 4vmax);
+    height: calc(40px + 4vmax);
 
 }
 
@@ -123,7 +123,8 @@
     display: flex;
     flex-direction: column;
     align-self: center;
-
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .clear-screen:hover {
